src/theme-base/sass/includes/default-mobile.scss
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt
 */
body{
	-webkit-text-size-adjust:none;
	font-family:Verdana, Arial, Helvetica, sans-serif;
	font-size:80%;
	color:#333;
}

/* Override jQuery Mobile hiding of content on mobile loading to eliminate white flicker */
.ui-mobile-rendering > * {
	visibility: visible !important;
}

#wb-skip {
	a, a:link, a:visited {
		text-shadow: none !important;
	}
}

#wb-body-sec #wb-skip2 {
	display:none;
	visibility:hidden;
}

#base-psnb,#base-srchbx{
	h2 a{
		color:#000;
		text-decoration:none;
	}
}

#wb-body,#wb-body-sec{
	background:#fff !important;
}

#base-title{
	background:#CF3F0E;
	min-height:40px;
	font-weight:700;
	padding:2px 5px;
	a{
		font-size:1.5em;
		color:#fff !important;
		text-shadow:0 1px 1px #044062;
		text-decoration:none;
	}
}

#base-date-mod{
	float:right;
	margin:5px 0;
}

[class*="span-"]{
	position:relative;
}

#wb-main-in {
	padding-left:5px;
	padding-right:5px;
	h1{
		border-bottom:1px solid #e5e5e5;
		font-weight:400;
		margin-top:5px;
		position:static !important;
		&.wb-invisible{
			position:absolute !important;
		}
	}
	.span-1,.span-2,.span-3,.span-4,.span-5,.span-6,.span-7,.span-8,.span-9,.span-10,.span-11,.span-12{
		margin-bottom:20px;
	}
}

h2,h3,h4,h5,h6,p,blockquote,table,form,img,pre{
	margin-left:0;
	margin-right:0;
	text-shadow:none;
}

a {
	color: #326CA6;
	font-weight:bold;
}

.clear{
	clear:both;
	display:block;
	height:0;
	overflow:hidden;
	visibility:hidden;
	width:0;
	margin:0;
}

.ui-mobile {
	#base-srch{
		box-shadow:none;
	}
	#wb-sec{
		display:none;
	}
	.ui-content{
		padding:0 15px;
	}
	.wet-boew-menubar a{
		padding:0;
	}
}

#wb-sec{
	padding:5px;
}

#base-sft, #base-sft-in{
	background: #efefef;
}

#base-sft{
	padding-bottom:5px;
	margin-top:5px;
	li a.ui-btn {
		font-weight:700;
	}
}

#base-sft-in{
	border-top: 1px solid #CCCCCC;
	padding: 5px;
	div{
		width:50%;
		float:left;
	}
}

#base-fullft {
	clear:both;
	margin:0;
	padding:5px;
	li{
		width:50%;
		float:left !important;
		margin:10px 0;
		&#base-fullft-ca div{
			text-align:left;
		}
	}
}

img{
	max-width:100%;
	height:auto;
	display:block;
}

#base-fullhd{ 
	p {
		display:none;
	}
	ul {
		margin: 0 5px 0 0;
		li{
			display:none;
			padding-top:8px;
		}
		#base-fullhd-lang{
			display:inline;
			float:right;
			margin-bottom:2px;
		}
	}
}

#base-fullhd-lang a{
	color:#222;
	text-decoration:none;
	background:#eee;
	border:1px solid #ddd;
	border-radius:2px;
	float:right;
	font-weight:400;
	padding:3px;
}

#base-srch-submit{
	min-height:22px;
	display:inline;
	margin:0;
}

#base-psnb,#base-srchbx{
	width:50%;
	float:right;
	border-top:1px solid #CCC;
	h2 {
		text-shadow:0 1px 0 #FFF;
		background-color:#EEEEEE;
		background-image:-webkit-gradient(linear,left top,left bottom,from(#FFFFFF),to(#F1F1F1));
		background-image:-webkit-linear-gradient(#FFFFFF,#F1F1F1);
		background-image:-moz-linear-gradient(#FFFFFF,#F1F1F1);
		background-image:-ms-linear-gradient(#FFFFFF,#F1F1F1);
		background-image:-o-linear-gradient(#FFFFFF,#F1F1F1);
		background-image:linear-gradient(#FFFFFF,#F1F1F1);
		&:hover, &:focus, &:active {
			background-color:#DFDFDF;
			background-image:-webkit-gradient(linear,left top,left bottom,from(#F6F6F6),to(#E0E0E0));
			background-image:-webkit-linear-gradient(#F6F6F6,#E0E0E0);
			background-image:-moz-linear-gradient(#F6F6F6,#E0E0E0);
			background-image:-ms-linear-gradient(#F6F6F6,#E0E0E0);
			background-image:-o-linear-gradient(#F6F6F6,#E0E0E0);
			background-image:linear-gradient(#F6F6F6,#E0E0E0);
		}
		color:#222;
		text-align:center;
		font-size:1em;
		text-transform:capitalize;
		position:relative;
		font-weight:700;
		margin:0;
		padding:0.7em 18px 0.8em 0;
		border-top: 1px solid #CCC;
		border-bottom:1px solid #CCC;
		border-left:1px solid #CCC;
		border-right:none;
	}
}

#base-bnr .ui-navbar a.ui-btn-active {
	background-color:#DFDFDF;
	background-image:-webkit-gradient(linear,left top,left bottom,from(#F6F6F6),to(#E0E0E0));
	background-image:-webkit-linear-gradient(#F6F6F6,#E0E0E0);
	background-image:-moz-linear-gradient(#F6F6F6,#E0E0E0);
	background-image:-ms-linear-gradient(#F6F6F6,#E0E0E0);
	background-image:-o-linear-gradient(#F6F6F6,#E0E0E0);
	background-image:linear-gradient(#F6F6F6,#E0E0E0);
	border:1px solid #CCC;
	border-right:none;
	color:#222;
	text-shadow:none;
}

#base-psnb h2 {
	span {
		display: none;
	}
}

#base-srchbx h2{
	padding-right:20px;
}

#base-subsite{
	font-size:130%;
	text-shadow:1px 1px 1px #333;
	p {
		margin-top:0px;
		margin-bottom:0px;
	}
}

#base-bnr-in .ui-mini .ui-btn-inner {
	font-size:1em;
}

.wet-boew-menubar {
	a{
		border-top:1px solid #ccc;
		border-bottom:1px solid #ccc;
		color:#222;
		text-decoration:none;
		display:block;
		position:relative;
		z-index:200;
		font-weight:700;
		text-align:center;
		background:#eee;
		padding:0.8em 0 0.9em;
	}
	ul{
		list-style-type:none;
		position:relative;
		z-index:1;
		margin:0;
		padding:0;
	}
	li{
		color:#333;
		text-shadow:0 1px 0 #fff;
		position:relative;
		z-index:1;
		h3{
			font-weight:400;
			font-size:1em;
			margin:0;
			padding:0;
		}
	}
}

#base-bnr,#wb-core{
	clear:both;
}

#base-bnr{
	background:#4E7EB7;
}

#base-date-mod,#wb-head,#base-sft-in,#jqm-wb-mb #base-bc-in ol{
	&:after{
		content:".";
		display:block;
		height:0;
		clear:both;
		visibility:hidden;
	}
}

.wet-boew-menubar li .mb-sm,#base-bc,#base-psnb #base-psnb-in,#base-srchbx form,.wet-boew-menubar li .mb-sm *{
	display:none;
}

#base-srch-submit{
	min-height: 22px;
}

.ui-content .ui-listview {
    margin: 0 -15px;
}

.ui-collapsible-heading, .ui-li-static {
	font-size:1em;
	margin:0;
}

.ui-dialog, .ui-popup {
	h1 {
		border-bottom: none;
	}
}

#jqm-wb-mb {
	a:link{
		text-decoration: none
	}
	h3.top-section{
		font-size:1.2em;
	}
	.ui-content{
		padding:0 15px 5px;
		.ui-listview{
			margin:0;
		}
	}
	.ui-btn-inner{
		white-space:normal;
	}
	.ui-btn-icon-top .ui-btn-inner{
		padding:0.6em 33px 0.7em 10px;
	}
	.ui-btn-icon-right {
		span.ui-btn-inner {
			padding-left: 40px;
		}
		div.ui-btn-inner {
			padding-left: 25px;
		}
	}
	.ui-body-a {
		background: #FFF;
	}
	.ui-collapsible-set {
		margin: 0;
		a {
			white-space: normal;
		}
	}
	.ui-collapsible-heading .ui-btn {
		border-left-width: 1px;
		border-right-width: 1px;
	}
	.ui-collapsible-heading:not(.ui-collapsible-heading-collapsed) a {
		-webkit-border-bottom-right-radius: 0;
		-webkit-border-bottom-left-radius: 0;
		-moz-border-radius-bottomright: 0;
		-moz-border-radius-bottomleft: 0;
		border-bottom-left-radius: 0;
		border-bottom-right-radius: 0;
	}
	.ui-collapsible-content {
		padding:0;
		a {
			padding-left:55px;
		}
		.ui-btn-icon-right .ui-btn-inner {
			padding-left: 0;
		}
		.ui-collapsible-heading-toggle {
			padding-left:15px;
		}
		.ui-collapsible-content {
			a {
				padding-left:70px;
			}
			.ui-collapsible-heading-toggle {
				padding-left:30px;
			}
			.ui-collapsible-content {
				a {
					padding-left:85px;
				}
				.ui-collapsible-heading-toggle {
					padding-left:45px;
				}
			}
		}
	}
	.ui-li-static {
		border-left: none;
		border-right: none;
		background: #F4F4F4;
	}
	.ui-btn{
		margin:0;
		text-align:left;
	}
	.ui-li{
		padding: 0;
		border-width:1px 1px 0 1px;
		.ui-collapsible:first-child {
			margin-top: -1px;
		}
	}
	.ui-corner-bottom {
		border-bottom-width:1px;
	}
	h1{
		border-bottom:none;
	}
	h2{
		color:#555;
	}
	div.ui-collapsible-set + h2{
		border-top:3px groove #fff;
		padding-top:8px;
		margin-top:23px;
	}
	.ui-content h2 + ul.ui-listview{
		margin-bottom:1em;
	}
	.top-section a{
		margin:0 0 5px;
		border-radius:0;
		-moz-border-radius:0;
		-webkit-border-radius:0;
	}
	.top-level.ui-btn-corner-all {
		border-radius:0.6em;
	}
	#base-bc-in {
		background:#DFDFDD;
		background-image:-webkit-gradient(linear,left top,left bottom,from(#F0EFEF),to(#DFDFDD));
		background-image:-webkit-linear-gradient(#F0EFEF,#DFDFDD);
		background-image:-moz-linear-gradient(#F0EFEF,#DFDFDD);
		background-image:-ms-linear-gradient(#F0EFEF,#DFDFDD);
		background-image:-o-linear-gradient(#F0EFEF,#DFDFDD);
		background-image:linear-gradient(#F0EFEF,#DFDFDD);
		color: #555;
		border-radius:0;
		-moz-border-radius:0;
		-webkit-border-radius:0;
		text-shadow:0 1px 1px #fff;
		border-bottom:1px solid #ccc;
		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
		a {
			color: #326CA6;
			text-decoration: none;
			border-radius:0;
			-moz-border-radius:0;
			-webkit-border-radius:0;
			&:hover,&:active{
				text-decoration:underline;
			}
		}
		li {
			background: url(../images/bcrumb-mobile.png) no-repeat right center;
			display: inline;
			float: left;
			margin: 0;
			padding: 5px 12px 5px 5px;
			border-radius:0;
			-moz-border-radius:0;
			-webkit-border-radius:0;
			&:last-child {
				background-image: none;
				padding-left:5px;
			}
		}
		ol {
			line-height: 1.57em;
			list-style-type: none;
			margin: 0;
			padding: 0;
			font-size:90%;
		}
	}
}

#jqm-mb-location-text {
	margin:0 -15px 10px;
	h2{
		display:none;
	}
}

.mobile-hide{
	display:none !important;
}

.mobile-show{
	display:block !important;
}

a:active{
	text-decoration:underline !important;
}

.ui-loader-default h1{
    margin:0;
    padding:0;
    border:0;
}

/* Custom jquery.mobile icons */
.ui-icon-site-menu {
	background-image: url(../images/icons-18-white.png);
}
.ui-icon-alt {
	background-image: url(../images/icons-18-black.png);
}

@media only screen and (-webkit-min-device-pixel-ratio:1.5),
	only screen and (min--moz-device-pixel-ratio:1.5), 
	only screen and (-o-min-device-pixel-ratio: 3/2), 
	only screen and (min-device-pixel-ratio:1.5), 
	only screen and (min-resolution:240dpi), 
	only screen and (min-resolution:1.5dppx) {
	.ui-icon-site-menu {
		background-image: url(../images/icons-36-white.png);
	}
	.ui-icon-alt {
		background-image: url(../images/icons-36-black.png);
	}
}

/* Position and size the custom icon */
.ui-icon-site-menu,.ui-icon-alt {
	background-position: 0px 50%;
	background-size: 18px 18px;
}

.no-js {
	#base-srch{
		margin-top:3px;
		padding:3px 0;
	}
	#base-psnb {
		li{
			border: 1px solid #222;
		}
		a{
			color:#222;
			padding: 0.45em 0.79em;
		}
	}
	.ui-content{
		padding:0;
	}
	.mobile-pe{
		display:none !important;
	}
}

